--- a/source/index.html
+++ b/source/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
-  <title>Title</title>
+  <title>Оплата и доставка</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/roboto-light.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/KievitPro-ExtraBold.woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
 
   <div class="container">
-    <h1>title</h1>
+    <h1>Оплата и доставка</h1>
+    <p>Поскольку мы производим зеркала по вашему индивидуальному заказу, нам необходимо получить предоплату вашего заказа.</p>
   </div>
 
   <script src="js/scripts.min.js"></script>
 </body>
+
 </html>
