--- a/source/index.html
+++ b/source/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Оплата и доставка</title>
-  <meta name="description" content="">
+  <title>Оплата и доставка – производство зеркал и стеклянных изделий Liberta</title>
+  <meta name="description" content="Оплата и доставка украинского производителя, фабрика стекла Liberta.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -15,10 +15,65 @@
 
 <body>
 
-  <div class="container">
-    <h1>Оплата и доставка</h1>
-    <p>Поскольку мы производим зеркала по вашему индивидуальному заказу, нам необходимо получить предоплату вашего заказа.</p>
-  </div>
+  <main>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-8">
+          <h1>Оплата и доставка</h1>
+          <p>Поскольку мы производим зеркала по вашему индивидуальному заказу, нам необходимо получить предоплату вашего заказа.</p>
+          <section class="mt-40p">
+            <h2>Способы доставки</h2>
+            <div class="row align-items-center mb-20p">
+              <div class="col-12 col-md-6">
+                <div class="row align-items-center">
+                  <div class="col-3 text-right">
+                    <img class="img-fluid" src="//liberta.ua/img/delivery-method-1.png" alt="">
+                  </div>
+                  <div class="col-9">
+                    <p class="mb-0">Aдресная доставка до вашего подъезда</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <div class="row align-items-center">
+                  <div class="col-3">
+                    <img class="img-" src="//liberta.ua/img/delivery-method-2.png" alt="">
+                  </div>
+                  <div class="col-9">
+                    <p class="mb-0">Доставка в грузовое отделение Курьерской Службы Доставки</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <p class="bg-pink p-20p">
+              <span class="text-secondary font-weight-bold">Внимание!</span> Перед получением, проверьте целостность продукции. Расписываясь в бланке приема при получении, вы соглашаетесь с тем, что товар поставлен в полном объеме и надлежащего качества.
+            </p>
+          </section>
+          <section class="mt-40p">
+            <h2>Способы оплаты</h2>
+            <img class="mb-2" src="//liberta.ua/img/delivery-pay-method-2.png" alt="">
+            <div class="h6">Безналичными</div>
+            <p>Оплата по безналичному расчет производится в кассе отделения любого банка или с расчетного счета Вашей фирмы.</p>
+            <p>При выборе безналичного способа оплаты доставка заказа возможно после получения средств на наш расчетный счет.</p>
+          </section>
+          <section class="mt-40p">
+            <h3 class="h2">Транспортная упаковка зеркал</h3>
+            <p>Все товары компании Liberta поставляются в упаковке из трехшарового брендированого гофрокартона. Дополнительную защиту от повреждений при транспортировке зеркал обеспечивает пенопласт. Упаковка также оборудована ручкой для удобной и безопасной транспортировки. Благодаря этому вероятность повреждения зеркала минимальна. Тем не менее, при получении зеркала в службе доставки, обязательно убедитесь, что изделие не повреждено. Вскройте упаковку при получении и проверьте зеркало.</p>
+            <p class="font-weight-bold">
+              <img class="mr-3" src="//liberta.ua/img/delivery-attention.png" alt="">
+              Не ставьте продукцию на угол или торец, это может привести к сколам и трещинам!
+            </p>
+          </section>
+        </div>
+        <div class="col-xl-4 bg-light fs-14 px-30p py-60p">
+          <div class="h5">Бесплатная доставка</div>
+          <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
+          <img class="img-fluid d-block mx-auto" src="//liberta.ua/img/delivery-free-delivery.png" alt="">
+          <p class="border border-2 p-20p">Если служба доставки не дает вам возможность вскрыть упаковку — откажитесь от приема товара и <a href="/contacts">сообщите нам</a> о данном факте удобным для вас способом.</p>
+        </div>
+      </div>
+    </div>
+  </main>
 
   <script src="js/scripts.min.js"></script>
 </body>
