--- a/source/index.html
+++ b/source/index.html
@@ -15,10 +15,16 @@
 
 <body>
 
-  <main>
+  <main class="delivery">
     <div class="container">
       <div class="row">
-        <div class="col-xl-8">
+        <div class="col-xl-8 bg-white pb-60p">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="/">Главная</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Оплата и доставка – производство зеркал и стеклянных изделий Liberta</li>
+            </ol>
+          </nav>
           <h1>Оплата и доставка</h1>
           <p>Поскольку мы производим зеркала по вашему индивидуальному заказу, нам необходимо получить предоплату вашего заказа.</p>
           <section class="mt-40p">
@@ -74,6 +80,101 @@
       </div>
     </div>
   </main>
+
+  <div class="subscribe">
+    <div class="container">
+      <form>
+        <div class="form-group mb-0 form-row align-items-center justify-content-center">
+          <label for="subscribe" class="col-auto mb-0">Советы по стилю, новинки и распродажи. Подпишись:</label>
+          <div class="col-auto">
+            <input type="email" class="subscribe__form-control form-control" id="subscribe" placeholder="Ваша эл. почта" required>
+          </div>
+          <div class="col-auto">
+            <button class="subscribe__btn btn btn-secondary">Подписаться</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="row no-gutters align-items-start d-none d-xl-flex">
+        <div class="col-3 footer__col">
+          <div class="footer__menu-title">Интернет-магазин</div>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="/about-us">О компании</a></li>
+            <li><a href="/blog">Блог</a></li>
+            <li><a href="/showrooms">Адреса шоу-румов</a></li>
+          </ul>
+        </div>
+        <div class="col-3 footer__col">
+          <div class="footer__menu-title">Каталог товаров</div>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="/mirrors">Зеркала</a></li>
+            <li><a href="/showers-cabins">Душевые</a></li>
+            <li><a href="/doors">Межкомнатные двери</a></li>
+            <li><a href="/sliding">Раздвижные системы</a></li>
+          </ul>
+        </div>
+        <div class="col-3 footer__col">
+          <div class="footer__menu-title">Информация для покупателей</div>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="/service-center">Сервисный центр</a></li>
+            <li><a href="/payment-and-delivery">Доставка и оплата</a></li>
+            <li><a href="/garranty-and-return">Гарантия и возврат</a></li>
+          </ul>
+        </div>
+        <div class="col-3 footer__col footer__col--contacts">
+          <div class="footer__menu-title">Есть вопросы?</div>
+          <ul class="footer__phones list-unstyled">
+            <li><a href="tel:+380673265980">+38(067) 326-59-80</a></li>
+            <li><a href="tel:+380501005980">+38(050) 100-59-80</a></li>
+            <li><a href="tel:+380931701347">+38(093) 170-13-47</a></li>
+          </ul>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="mailto:info@liberta.com.ua">info@liberta.com.ua</a></li>
+            <li><a href="/contacts">Контактная информация</a></li>
+            <li><a href="/mission">Социальная миссия</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <div class="row align-items-center">
+          <div class="col-4">
+            <p class="text-muted mb-0">© 2020 Интернет-магазин Liberta</p>
+          </div>
+          <div class="col-4">
+            <ul class="footer__social list-unstyled mb-0">
+              <li>
+                <a href="https://www.facebook.com/Liberta.LED" target="_blank">
+                  <svg aria-hidden="true" focusable="false" viewBox="0 0 320 512" height="20">
+                    <path fill="currentColor" d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"></path>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/channel/UCUk-bx0lXWfaahpbkN3lMwA" target="_blank">
+                  <svg aria-hidden="true" focusable="false" viewBox="0 0 576 512" height="20">
+                    <path fill="currentColor" d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"></path>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/liberta.ua/" target="_blank">
+                  <svg aria-hidden="true" focusable="false" viewBox="0 0 448 512" height="20">
+                    <path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-4 text-right">
+            <p class="text-muted mb-0">Создание дизайна - <a rel="nofollow" target="_blank" href="http://www.fresh-d.net/">Fresh Agency</a></p>
+          </div>
+        </div>
+      </div>
+  </footer>
 
   <script src="js/scripts.min.js"></script>
 </body>
