--- a/source/home.html
+++ b/source/home.html
@@ -15,13 +15,13 @@
 
 <body>
 
-  <div class="container py-4">
-    <div class="list-group">
-      <a href="home.html" class="list-group-item list-group-item-action">Главная</a>
-      <a href="payment-and-delivery.html" class="list-group-item list-group-item-action">Оплата и доставка</a>
-    </div>
-  </div>
+  <include src="source/include/header.html"></include>
 
+
+
+  <include src="source/include/footer.html"></include>
+
+  <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
