--- a/source/home.html
+++ b/source/home.html
@@ -17,7 +17,43 @@
 
   <include src="source/include/header.html"></include>
 
-
+  <section class="advantages py-3 d-none d-md-block">
+    <div class="container">
+      <h2 class="sr-only">Преимущества</h2>
+      <ul class="row row-16 list-unstyled mb-0">
+        <li class="col-4">
+          <div class="advantages-item" style='background-image: url("//liberta.ua/img/main-advantage-1.jpg")'>
+            <div class="row">
+              <div class="col-10">
+                <h3 class="h2 mb-2">Высокое качество стекла</h3>
+                <p class="advantages-item__descr">Обладает особым блеском <br>и способностью сильно <br>преломлять свет</p>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="col-4">
+          <div class="advantages-item" style='background-image: url("//liberta.ua/img/main-advantage-2.jpg")'>
+            <div class="row">
+              <div class="col-10">
+                <h3 class="h2 mb-2">Современные технологии</h3>
+                <p class="advantages-item__descr">Лежат в основе <br>производства зеркал</p>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="col-4">
+          <div class="advantages-item" style='background-image: url("//liberta.ua/img/main-advantage-3.jpg")'>
+            <div class="row">
+              <div class="col-10">
+                <h3 class="h2 mb-2">Контроль качества</h3>
+                <p class="advantages-item__descr">Вся продукция <br>контролируется</p>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
 
   <include src="source/include/footer.html"></include>
 
