--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
 
   <div class="container py-4">
     <div class="list-group">
-      <a href="home.html" class="list-group-item list-group-item-action">Главная</a>
+      <a href="main.html" class="list-group-item list-group-item-action">Главная</a>
       <a href="payment-and-delivery.html" class="list-group-item list-group-item-action">Оплата и доставка</a>
     </div>
   </div>
