--- a/source/payment-and-delivery.html
+++ b/source/payment-and-delivery.html
@@ -15,7 +15,11 @@
 
 <body>
 
-  <include src="source/include/header.html"></include>
+  <include src="source/include/popup-info-up.html"></include>
+
+  <header class="header">
+    <include src="source/include/header.html"></include>
+  </header>
 
   <main class="delivery">
     <div class="container">
