--- a/main.html
+++ b/main.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Оплата и доставка – производство зеркал и стеклянных изделий Liberta</title>
-  <meta name="description" content="Оплата и доставка украинского производителя, фабрика стекла Liberta.">
+  <title>Liberta - производство зеркал, душевых кабин и стеклянных межкомнатных дверей</title>
+  <meta name="description" content="Liberta - фабрика стекла, украинский производитель зеркал, стеклянных душевых кабин">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -27,7 +27,7 @@
 </div>
 
 
-  <header class="header">
+  <header class="header header--main">
     <div class="container header__top">
   <div class="row align-items-center">
     <div class="col-5">
@@ -120,70 +120,154 @@
 
   </header>
 
-  <main class="delivery">
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-8 bg-white pb-60p">
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="/">Главная</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Оплата и доставка – производство зеркал и стеклянных изделий Liberta</li>
-            </ol>
-          </nav>
-          <h1>Оплата и доставка</h1>
-          <p>Поскольку мы производим зеркала по вашему индивидуальному заказу, нам необходимо получить предоплату вашего заказа.</p>
-          <section class="mt-40p">
-            <h2>Способы доставки</h2>
-            <div class="row align-items-center mb-20p">
-              <div class="col-12 col-md-6">
+  <main>
+
+    <div class="main-carousel">
+      <ul class="main-carousel__social list-unstyled mb-0">
+        <li>
+          <a href="https://www.facebook.com/Liberta.LED" target="_blank">
+            <svg height="20" fill="currentColor" aria-hidden="true" focusable="false">
+              <use xlink:href="img/sprite.svg#fb"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/channel/UCUk-bx0lXWfaahpbkN3lMwA" target="_blank">
+            <svg height="20" fill="currentColor" aria-hidden="true" focusable="false">
+              <use xlink:href="img/sprite.svg#youtube"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/liberta.ua/" target="_blank">
+            <svg height="20" fill="currentColor" aria-hidden="true" focusable="false">
+              <use xlink:href="img/sprite.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+
+      <div id="carouselMain" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselMain" data-slide-to="0" class=""></li>
+          <li data-target="#carouselMain" data-slide-to="1" class="active"></li>
+          <li data-target="#carouselMain" data-slide-to="2" class=""></li>
+          <li data-target="#carouselMain" data-slide-to="3" class=""></li>
+          <li data-target="#carouselMain" data-slide-to="4" class=""></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="//liberta.ua/img/xb1.jpg.pagespeed.ic.PcdILtXcRa.webp" alt="First slide">
+            <div class="carousel-caption">
+              <span><a href="/mirrors-smart">Привет!<br> Я – будущее</a></span>
+              <p>Серия Smart Mirror на базе Android</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="//liberta.ua/img/xb2.jpg.pagespeed.ic.C5fcacCOHr.webp" alt="First slide">
+            <div class="carousel-caption">
+              <span><a href="/mirrors-royal">Подчеркивая статус</a></span>
+              <p>Премиальные зеркала новой Royal серии</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="//liberta.ua/img/xb3.jpg.pagespeed.ic.u7Vs6rCRr7.webp" alt="First slide">
+            <div class="carousel-caption">
+              <span><a href="/doors">Мыслить творчески</a></span>
+              <p>Межкомнатные двери по индивидуальным размерам</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="//liberta.ua/img/b4.jpg" alt="First slide">
+            <div class="carousel-caption">
+              <span><a href="/showers">Дизайн без границ</a></span>
+              <p>Душевые кабины по индивидуальным размерам</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="//liberta.ua/img/b5.jpg" alt="First slide">
+            <div class="carousel-caption">
+              <span><a href="/mirrors-withillumination">Жизнь в красоте</a></span>
+              <p>Зеркала с подсветкой по индивидуальным размерам</p>
+            </div>
+          </div>
+        </div>
+        <div class="wrap-carousel-icon">
+          <a class="carousel-control-next" href="#carouselMain" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+          <a class="carousel-control-prev" href="#carouselMain" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="main-carousel__video-wrap d-none d-xl-block">
+        <div class="container">
+          <div class="row row-16">
+            <div class="col-4 ml-auto">
+              <div class="main-carousel__video">
                 <div class="row align-items-center">
-                  <div class="col-3 text-right">
-                    <img class="img-fluid" src="//liberta.ua/img/delivery-method-1.png" alt="">
+                  <div class="col-auto">
+                    <a href="https://www.youtube.com/watch?v=dOKsOO2PYWY" class="main-carousel__video-play btn btn-primary" data-fancybox="">
+                      <span class="sr-only">Смотреть</span>
+                    </a>
                   </div>
-                  <div class="col-9">
-                    <p class="mb-0">Aдресная доставка до вашего подъезда</p>
+                  <div class="col">
+                    <p class="mb-0">Всё о компании за 45 секунд</p>
+                    <button type="button" class="main-carousel__video-cancel btn-unstyled">Спасибо, уже видел</button>
                   </div>
-                </div>
-              </div>
-              <div class="col-12 col-md-6">
-                <div class="row align-items-center">
-                  <div class="col-3">
-                    <img class="img-" src="//liberta.ua/img/delivery-method-2.png" alt="">
-                  </div>
-                  <div class="col-9">
-                    <p class="mb-0">Доставка в грузовое отделение Курьерской Службы Доставки</p>
-                  </div>
+                  <button type="button" class="main-carousel__video-close btn-unstyled">
+                    <span class="sr-only">Закрыть</span>
+                  </button>
                 </div>
               </div>
             </div>
-            <p class="bg-pink p-20p">
-              <span class="text-secondary font-weight-bold">Внимание!</span> Перед получением, проверьте целостность продукции. Расписываясь в бланке приема при получении, вы соглашаетесь с тем, что товар поставлен в полном объеме и надлежащего качества.
-            </p>
-          </section>
-          <section class="mt-40p">
-            <h2>Способы оплаты</h2>
-            <img class="mb-2" src="//liberta.ua/img/delivery-pay-method-2.png" alt="">
-            <div class="h6">Безналичными</div>
-            <p>Оплата по безналичному расчет производится в кассе отделения любого банка или с расчетного счета Вашей фирмы.</p>
-            <p>При выборе безналичного способа оплаты доставка заказа возможно после получения средств на наш расчетный счет.</p>
-          </section>
-          <section class="mt-40p">
-            <h3 class="h2">Транспортная упаковка зеркал</h3>
-            <p>Все товары компании Liberta поставляются в упаковке из трехшарового брендированого гофрокартона. Дополнительную защиту от повреждений при транспортировке зеркал обеспечивает пенопласт. Упаковка также оборудована ручкой для удобной и безопасной транспортировки. Благодаря этому вероятность повреждения зеркала минимальна. Тем не менее, при получении зеркала в службе доставки, обязательно убедитесь, что изделие не повреждено. Вскройте упаковку при получении и проверьте зеркало.</p>
-            <p class="font-weight-bold">
-              <img class="mr-3" src="//liberta.ua/img/delivery-attention.png" alt="">
-              Не ставьте продукцию на угол или торец, это может привести к сколам и трещинам!
-            </p>
-          </section>
-        </div>
-        <div class="col-xl-4 bg-light fs-14 px-30p py-60p">
-          <div class="h5">Бесплатная доставка</div>
-          <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
-          <img class="img-fluid d-block mx-auto" src="//liberta.ua/img/delivery-free-delivery.png" alt="">
-          <p class="border border-2 p-20p">Если служба доставки не дает вам возможность вскрыть упаковку — откажитесь от приема товара и <a href="/contacts">сообщите нам</a> о данном факте удобным для вас способом.</p>
+          </div>
         </div>
       </div>
     </div>
+
+    <section class="advantages py-3 d-none d-md-block">
+      <div class="container">
+        <h2 class="sr-only">Преимущества</h2>
+        <ul class="row row-16 list-unstyled mb-0">
+          <li class="col-4">
+            <div class="advantages-item" style="background-image: url(&quot;//liberta.ua/img/main-advantage-1.jpg&quot;)">
+              <div class="row">
+                <div class="col-10">
+                  <h3 class="h2 mb-2">Высокое качество стекла</h3>
+                  <p class="advantages-item__descr">Обладает особым блеском <br>и способностью сильно <br>преломлять свет</p>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-4">
+            <div class="advantages-item" style="background-image: url(&quot;//liberta.ua/img/main-advantage-2.jpg&quot;)">
+              <div class="row">
+                <div class="col-10">
+                  <h3 class="h2 mb-2">Современные технологии</h3>
+                  <p class="advantages-item__descr">Лежат в основе <br>производства зеркал</p>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-4">
+            <div class="advantages-item" style="background-image: url(&quot;//liberta.ua/img/main-advantage-3.jpg&quot;)">
+              <div class="row">
+                <div class="col-10">
+                  <h3 class="h2 mb-2">Контроль качества</h3>
+                  <p class="advantages-item__descr">Вся продукция <br>контролируется</p>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
   </main>
 
   <div class="subscribe">
