--- a/source/main.html
+++ b/source/main.html
@@ -169,6 +169,30 @@
       </div>
     </section>
 
+    <section class="py-5">
+      <div class="container">
+        <h3 class="h2 text-center mb-30p">Будет полезно знать</h3>
+        <div class="posts-slider">
+          <div class="posts-slider__item">
+            <img class="img-fluid mb-3" src="//liberta.ua/uploads/blog/xprikhozhaya_v_malenkij_koridor_1531815219.jpg.pagespeed.ic.5-aGELuxTg.webp" alt="">
+            <a class="stretched-link">Как выбрать зеркало в прихожую?</a>
+          </div>
+          <div class="posts-slider__item">
+            <img class="img-fluid mb-3" src="//liberta.ua/uploads/blog/xovalnoe-zerkalo-krasivye-primery-ispolzovaniya-v-dizajne-interera_1531817083.jpg.pagespeed.ic.0eoDDTz68l.webp" alt="">
+            <a class="stretched-link">Как выбрать овальное зеркало</a>
+          </div>
+          <div class="posts-slider__item">
+            <img class="img-fluid mb-3" src="//liberta.ua/uploads/blog/xIMG_57de120fa6c8_1531817347.jpg.pagespeed.ic.uZ4eLJKstP.webp" alt="">
+            <a class="stretched-link">Как выбрать зеркало</a>
+          </div>
+          <div class="posts-slider__item">
+            <img class="img-fluid mb-3" src="//liberta.ua/uploads/blog/x160114_dekor-15_1531816910.jpg.pagespeed.ic.Ffdr_u_GuU.webp" alt="">
+            <a class="stretched-link">Как выбрать форму и размер зеркала</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <include src="source/include/footer.html"></include>
