--- a/source/main.html
+++ b/source/main.html
@@ -169,6 +169,17 @@
       </div>
     </section>
 
+    <section class="manufacture" style="--bg: url('//liberta.ua/img/main-making.jpg');">
+      <div class="container">
+        <h2 class="h1 mb-20p">Изготовление зеркал<br> и душевых кабин под заказ</h2>
+        <div class="row justify-content-center">
+          <div class="col-lg-4">
+            <p>Создаем стеклянные издения высокого качества и эксклюзивного дизайна, предлагая лучший сервис.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="py-5">
       <div class="container">
         <h3 class="h2 text-center mb-30p">Будет полезно знать</h3>
