--- a/source/main.html
+++ b/source/main.html
@@ -169,6 +169,62 @@
       </div>
     </section>
 
+    <section class="why-us py-40p">
+      <div class="container">
+        <h2 class="sr-only">Почему стоит выбрать именно нас?</h2>
+        <ul class="why-us__list row list-unstyled mb-0">
+          <li class="col-3">
+            <div class="why-us__item">
+              <div class="row align-items-center">
+                <div class="col-3">
+
+                </div>
+                <div class="col-8">
+                  <h3 class="why-us__item-title">Собственное производство</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="why-us__item">
+              <div class="row align-items-center">
+                <div class="col-3">
+
+                </div>
+                <div class="col-8">
+                  <h3 class="why-us__item-title">Вся продукция сертифицирована</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="why-us__item">
+              <div class="row align-items-center">
+                <div class="col-3">
+
+                </div>
+                <div class="col-8">
+                  <h3 class="why-us__item-title">Уникальные технологии</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="why-us__item">
+              <div class="row align-items-center">
+                <div class="col-3">
+
+                </div>
+                <div class="col-8">
+                  <h3 class="why-us__item-title">Индивидуальные размеры</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <section class="manufacture" style="--bg: url('//liberta.ua/img/main-making.jpg');">
       <div class="container">
         <h2 class="h1 mb-20p">Изготовление зеркал<br> и душевых кабин под заказ</h2>
