--- a/source/main.html
+++ b/source/main.html
@@ -169,6 +169,18 @@
       </div>
     </section>
 
+    <section class="main-map">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-5">
+            <h2 class="h1 mb-20p">Более 270 магазинов по всей стране</h2>
+            <p class="mb-30p">Продаем продукцию Liberta в Украине</p>
+            <a href="/showrooms" class="btn btn-secondary">Адреса шоурумов</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="why-us py-40p">
       <div class="container">
         <h2 class="sr-only">Почему стоит выбрать именно нас?</h2>
