--- a/main.html
+++ b/main.html
@@ -268,6 +268,109 @@
       </div>
     </section>
 
+    <section class="main-map">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-5">
+            <h2 class="h1 mb-20p">Более 270 магазинов по всей стране</h2>
+            <p class="mb-30p">Продаем продукцию Liberta в Украине</p>
+            <a href="/showrooms" class="btn btn-secondary">Адреса шоурумов</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="why-us py-40p">
+      <div class="container">
+        <h2 class="sr-only">Почему стоит выбрать именно нас?</h2>
+        <ul class="why-us__list row list-unstyled mb-0">
+          <li class="col-3">
+            <div class="why-us__item">
+              <div class="row align-items-center">
+                <div class="col-3">
+
+                </div>
+                <div class="col-8">
+                  <h3 class="why-us__item-title">Собственное производство</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="why-us__item">
+              <div class="row align-items-center">
+                <div class="col-3">
+
+                </div>
+                <div class="col-8">
+                  <h3 class="why-us__item-title">Вся продукция сертифицирована</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="why-us__item">
+              <div class="row align-items-center">
+                <div class="col-3">
+
+                </div>
+                <div class="col-8">
+                  <h3 class="why-us__item-title">Уникальные технологии</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="why-us__item">
+              <div class="row align-items-center">
+                <div class="col-3">
+
+                </div>
+                <div class="col-8">
+                  <h3 class="why-us__item-title">Индивидуальные размеры</h3>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="manufacture" style="--bg: url('//liberta.ua/img/main-making.jpg');">
+      <div class="container">
+        <h2 class="h1 mb-20p">Изготовление зеркал<br> и душевых кабин под заказ</h2>
+        <div class="row justify-content-center">
+          <div class="col-lg-4">
+            <p>Создаем стеклянные издения высокого качества и эксклюзивного дизайна, предлагая лучший сервис.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="py-5">
+      <div class="container">
+        <h3 class="h2 text-center mb-30p">Будет полезно знать</h3>
+        <div class="posts-slider">
+          <div class="posts-slider__item">
+            <img class="img-fluid mb-3" src="//liberta.ua/uploads/blog/xprikhozhaya_v_malenkij_koridor_1531815219.jpg.pagespeed.ic.5-aGELuxTg.webp" alt="">
+            <a class="stretched-link">Как выбрать зеркало в прихожую?</a>
+          </div>
+          <div class="posts-slider__item">
+            <img class="img-fluid mb-3" src="//liberta.ua/uploads/blog/xovalnoe-zerkalo-krasivye-primery-ispolzovaniya-v-dizajne-interera_1531817083.jpg.pagespeed.ic.0eoDDTz68l.webp" alt="">
+            <a class="stretched-link">Как выбрать овальное зеркало</a>
+          </div>
+          <div class="posts-slider__item">
+            <img class="img-fluid mb-3" src="//liberta.ua/uploads/blog/xIMG_57de120fa6c8_1531817347.jpg.pagespeed.ic.uZ4eLJKstP.webp" alt="">
+            <a class="stretched-link">Как выбрать зеркало</a>
+          </div>
+          <div class="posts-slider__item">
+            <img class="img-fluid mb-3" src="//liberta.ua/uploads/blog/x160114_dekor-15_1531816910.jpg.pagespeed.ic.Ffdr_u_GuU.webp" alt="">
+            <a class="stretched-link">Как выбрать форму и размер зеркала</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <div class="subscribe">
