--- a/source/main.html
+++ b/source/main.html
@@ -169,7 +169,7 @@
       </div>
     </section>
 
-    <section class="main-map">
+    <section class="main-map section-parallax">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5">
@@ -179,6 +179,7 @@
           </div>
         </div>
       </div>
+      <div class="section-parallax__bg"></div>
     </section>
 
     <section class="why-us py-40p">
@@ -237,7 +238,7 @@
       </div>
     </section>
 
-    <section class="manufacture" style="--bg: url('//liberta.ua/img/main-making.jpg');">
+    <section class="manufacture section-parallax">
       <div class="container">
         <h2 class="h1 mb-20p">Изготовление зеркал<br> и душевых кабин под заказ</h2>
         <div class="row justify-content-center">
@@ -246,6 +247,7 @@
           </div>
         </div>
       </div>
+      <div class="section-parallax__bg"></div>
     </section>
 
     <section class="py-5">
