--- a/source/main.html
+++ b/source/main.html
@@ -189,10 +189,12 @@
           <li class="col-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-3">
-
+                <div class="col-auto">
+                  <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
+                    <use xlink:href="img/sprite.svg#factory"></use>
+                  </svg>
                 </div>
-                <div class="col-8">
+                <div class="col">
                   <h3 class="why-us__item-title">Собственное производство</h3>
                 </div>
               </div>
@@ -201,10 +203,12 @@
           <li class="col-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-3">
-
+                <div class="col-auto">
+                  <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
+                    <use xlink:href="img/sprite.svg#certificate"></use>
+                  </svg>
                 </div>
-                <div class="col-8">
+                <div class="col">
                   <h3 class="why-us__item-title">Вся продукция сертифицирована</h3>
                 </div>
               </div>
@@ -213,10 +217,12 @@
           <li class="col-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-3">
-
+                <div class="col-auto">
+                  <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
+                    <use xlink:href="img/sprite.svg#technology"></use>
+                  </svg>
                 </div>
-                <div class="col-8">
+                <div class="col">
                   <h3 class="why-us__item-title">Уникальные технологии</h3>
                 </div>
               </div>
@@ -225,10 +231,12 @@
           <li class="col-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-3">
-
+                <div class="col-auto">
+                  <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
+                    <use xlink:href="img/sprite.svg#sizes"></use>
+                  </svg>
                 </div>
-                <div class="col-8">
+                <div class="col">
                   <h3 class="why-us__item-title">Индивидуальные размеры</h3>
                 </div>
               </div>
