--- a/main.html
+++ b/main.html
@@ -268,7 +268,7 @@
       </div>
     </section>
 
-    <section class="main-map">
+    <section class="main-map section-parallax">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5">
@@ -278,6 +278,7 @@
           </div>
         </div>
       </div>
+      <div class="section-parallax__bg"></div>
     </section>
 
     <section class="why-us py-40p">
@@ -287,10 +288,12 @@
           <li class="col-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-3">
-
+                <div class="col-auto">
+                  <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
+                    <use xlink:href="img/sprite.svg#factory"></use>
+                  </svg>
                 </div>
-                <div class="col-8">
+                <div class="col">
                   <h3 class="why-us__item-title">Собственное производство</h3>
                 </div>
               </div>
@@ -299,10 +302,12 @@
           <li class="col-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-3">
-
+                <div class="col-auto">
+                  <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
+                    <use xlink:href="img/sprite.svg#certificate"></use>
+                  </svg>
                 </div>
-                <div class="col-8">
+                <div class="col">
                   <h3 class="why-us__item-title">Вся продукция сертифицирована</h3>
                 </div>
               </div>
@@ -311,10 +316,12 @@
           <li class="col-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-3">
-
+                <div class="col-auto">
+                  <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
+                    <use xlink:href="img/sprite.svg#technology"></use>
+                  </svg>
                 </div>
-                <div class="col-8">
+                <div class="col">
                   <h3 class="why-us__item-title">Уникальные технологии</h3>
                 </div>
               </div>
@@ -323,10 +330,12 @@
           <li class="col-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-3">
-
+                <div class="col-auto">
+                  <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
+                    <use xlink:href="img/sprite.svg#sizes"></use>
+                  </svg>
                 </div>
-                <div class="col-8">
+                <div class="col">
                   <h3 class="why-us__item-title">Индивидуальные размеры</h3>
                 </div>
               </div>
@@ -336,7 +345,7 @@
       </div>
     </section>
 
-    <section class="manufacture" style="--bg: url('//liberta.ua/img/main-making.jpg');">
+    <section class="manufacture section-parallax">
       <div class="container">
         <h2 class="h1 mb-20p">Изготовление зеркал<br> и душевых кабин под заказ</h2>
         <div class="row justify-content-center">
@@ -345,6 +354,7 @@
           </div>
         </div>
       </div>
+      <div class="section-parallax__bg"></div>
     </section>
 
     <section class="py-5">
