Адаптив main-carousel

--- a/source/main.html
+++ b/source/main.html
@@ -60,36 +60,56 @@
           <div class="carousel-item active">
             <img class="d-block w-100" src="//liberta.ua/img/xb1.jpg.pagespeed.ic.PcdILtXcRa.webp" alt="First slide">
             <div class="carousel-caption">
-              <span><a href="/mirrors-smart">Привет!<br> Я – будущее</a></span>
-              <p>Серия Smart Mirror на базе Android</p>
+              <div class="container">
+                <div class="main-carousel__text">
+                  <a href="/mirrors-smart">Привет!<br> Я – будущее</a>
+                  <p>Серия Smart Mirror на базе Android</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="//liberta.ua/img/xb2.jpg.pagespeed.ic.C5fcacCOHr.webp" alt="First slide">
             <div class="carousel-caption">
-              <span><a href="/mirrors-royal">Подчеркивая статус</a></span>
-              <p>Премиальные зеркала новой Royal серии</p>
+              <div class="container">
+                <div class="main-carousel__text">
+                  <a href="/mirrors-royal">Подчеркивая статус</a>
+                  <p>Премиальные зеркала новой Royal серии</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="//liberta.ua/img/xb3.jpg.pagespeed.ic.u7Vs6rCRr7.webp" alt="First slide">
             <div class="carousel-caption">
-              <span><a href="/doors">Мыслить творчески</a></span>
-              <p>Межкомнатные двери по индивидуальным размерам</p>
+              <div class="container">
+                <div class="main-carousel__text">
+                  <a href="/doors">Мыслить творчески</a>
+                  <p>Межкомнатные двери по индивидуальным размерам</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="//liberta.ua/img/b4.jpg" alt="First slide">
             <div class="carousel-caption">
-              <span><a href="/showers">Дизайн без границ</a></span>
-              <p>Душевые кабины по индивидуальным размерам</p>
+              <div class="container">
+                <div class="main-carousel__text">
+                  <a href="/showers">Дизайн без границ</a>
+                  <p>Душевые кабины по индивидуальным размерам</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="//liberta.ua/img/b5.jpg" alt="First slide">
             <div class="carousel-caption">
-              <span><a href="/mirrors-withillumination">Жизнь в красоте</a></span>
-              <p>Зеркала с подсветкой по индивидуальным размерам</p>
+              <div class="container">
+                <div class="main-carousel__text">
+                  <a href="/mirrors-withillumination">Жизнь в красоте</a>
+                  <p>Зеркала с подсветкой по индивидуальным размерам</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
