--- a/source/main.html
+++ b/source/main.html
@@ -158,7 +158,7 @@
           <li class="col-4">
             <div class="advantages-item" style='background-image: url("//liberta.ua/img/main-advantage-1.jpg")'>
               <div class="row">
-                <div class="col-10">
+                <div class="col-lg-10">
                   <h3 class="h2 mb-2">Высокое качество стекла</h3>
                   <p class="advantages-item__descr">Обладает особым блеском <br>и способностью сильно <br>преломлять свет</p>
                 </div>
@@ -168,7 +168,7 @@
           <li class="col-4">
             <div class="advantages-item" style='background-image: url("//liberta.ua/img/main-advantage-2.jpg")'>
               <div class="row">
-                <div class="col-10">
+                <div class="col-lg-10">
                   <h3 class="h2 mb-2">Современные технологии</h3>
                   <p class="advantages-item__descr">Лежат в основе <br>производства зеркал</p>
                 </div>
@@ -178,7 +178,7 @@
           <li class="col-4">
             <div class="advantages-item" style='background-image: url("//liberta.ua/img/main-advantage-3.jpg")'>
               <div class="row">
-                <div class="col-10">
+                <div class="col-lg-10">
                   <h3 class="h2 mb-2">Контроль качества</h3>
                   <p class="advantages-item__descr">Вся продукция <br>контролируется</p>
                 </div>
