Адаптив main-map & manufacture

--- a/source/main.html
+++ b/source/main.html
@@ -192,7 +192,7 @@
     <section class="main-map section-parallax">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-5">
+          <div class="col-xl-5 col-lg-6 col-md-7">
             <h2 class="h1 mb-20p">Более 270 магазинов по всей стране</h2>
             <p class="mb-30p">Продаем продукцию Liberta в Украине</p>
             <a href="/showrooms" class="btn btn-secondary">Адреса шоурумов</a>
@@ -270,7 +270,7 @@
       <div class="container">
         <h2 class="h1 mb-20p">Изготовление зеркал<br> и душевых кабин под заказ</h2>
         <div class="row justify-content-center">
-          <div class="col-lg-4">
+          <div class="col-xl-4 col-lg-6 col-md-7">
             <p>Создаем стеклянные издения высокого качества и эксклюзивного дизайна, предлагая лучший сервис.</p>
           </div>
         </div>
