--- a/source/main.html
+++ b/source/main.html
@@ -202,61 +202,61 @@
       <div class="section-parallax__bg"></div>
     </section>
 
-    <section class="why-us py-40p">
+    <section class="why-us py-3 py-md-40p">
       <div class="container">
         <h2 class="sr-only">Почему стоит выбрать именно нас?</h2>
         <ul class="why-us__list row list-unstyled mb-0">
-          <li class="col-3">
+          <li class="col-md-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-auto">
+                <div class="col-xl-auto col-md-12 col-auto">
                   <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
                     <use xlink:href="img/sprite.svg#factory"></use>
                   </svg>
                 </div>
-                <div class="col">
+                <div class="col-xl col-md-12 col mt-md-2 mt-xl-0">
                   <h3 class="why-us__item-title">Собственное производство</h3>
                 </div>
               </div>
             </div>
           </li>
-          <li class="col-3">
+          <li class="col-md-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-auto">
+                <div class="col-xl-auto col-md-12 col-auto">
                   <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
                     <use xlink:href="img/sprite.svg#certificate"></use>
                   </svg>
                 </div>
-                <div class="col">
+                <div class="col-xl col-md-12 col mt-md-2 mt-xl-0">
                   <h3 class="why-us__item-title">Вся продукция сертифицирована</h3>
                 </div>
               </div>
             </div>
           </li>
-          <li class="col-3">
+          <li class="col-md-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-auto">
+                <div class="col-xl-auto col-md-12 col-auto">
                   <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
                     <use xlink:href="img/sprite.svg#technology"></use>
                   </svg>
                 </div>
-                <div class="col">
+                <div class="col-xl col-md-12 col mt-md-2 mt-xl-0">
                   <h3 class="why-us__item-title">Уникальные технологии</h3>
                 </div>
               </div>
             </div>
           </li>
-          <li class="col-3">
+          <li class="col-md-3">
             <div class="why-us__item">
               <div class="row align-items-center">
-                <div class="col-auto">
+                <div class="col-xl-auto col-md-12 col-auto">
                   <svg class="why-us__item-icon img-fluid" width="64" height="64" fill="currentColor" aria-hidden="true" focusable="false">
                     <use xlink:href="img/sprite.svg#sizes"></use>
                   </svg>
                 </div>
-                <div class="col">
+                <div class="col-xl col-md-12 col mt-md-2 mt-xl-0">
                   <h3 class="why-us__item-title">Индивидуальные размеры</h3>
                 </div>
               </div>
