--- a/source/main.html
+++ b/source/main.html
@@ -50,11 +50,11 @@
 
       <div id="carouselMain" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li data-target="#carouselMain" data-slide-to="0" class=""></li>
-          <li data-target="#carouselMain" data-slide-to="1" class="active"></li>
-          <li data-target="#carouselMain" data-slide-to="2" class=""></li>
-          <li data-target="#carouselMain" data-slide-to="3" class=""></li>
-          <li data-target="#carouselMain" data-slide-to="4" class=""></li>
+          <li data-target="#carouselMain" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselMain" data-slide-to="1"></li>
+          <li data-target="#carouselMain" data-slide-to="2"></li>
+          <li data-target="#carouselMain" data-slide-to="3"></li>
+          <li data-target="#carouselMain" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
