--- a/source/payment-and-delivery.html
+++ b/source/payment-and-delivery.html
@@ -21,11 +21,11 @@
     <include src="source/include/header.html"></include>
   </header>
 
-  <main class="delivery">
+  <main class="delivery pt-30p pt-lg-0">
     <div class="container">
       <div class="row">
         <div class="col-xl-8 bg-white pb-60p">
-          <nav aria-label="breadcrumb">
+          <nav aria-label="breadcrumb" class="d-none d-lg-block">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="/">Главная</a></li>
               <li class="breadcrumb-item active" aria-current="page">Оплата и доставка – производство зеркал и стеклянных изделий Liberta</li>
@@ -36,9 +36,9 @@
           <section class="mt-40p">
             <h2>Способы доставки</h2>
             <div class="row align-items-center mb-20p">
-              <div class="col-12 col-md-6">
+              <div class="col-md-6 mb-3 mb-md-0">
                 <div class="row align-items-center">
-                  <div class="col-3 text-right">
+                  <div class="col-3 text-center">
                     <img class="img-fluid" src="//liberta.ua/img/delivery-method-1.png" alt="">
                   </div>
                   <div class="col-9">
@@ -46,10 +46,10 @@
                   </div>
                 </div>
               </div>
-              <div class="col-12 col-md-6">
+              <div class="col-md-6 mb-3 mb-md-0">
                 <div class="row align-items-center">
-                  <div class="col-3">
-                    <img class="img-" src="//liberta.ua/img/delivery-method-2.png" alt="">
+                  <div class="col-3 text-center">
+                    <img class="img-fluid" src="//liberta.ua/img/delivery-method-2.png" alt="">
                   </div>
                   <div class="col-9">
                     <p class="mb-0">Доставка в грузовое отделение Курьерской Службы Доставки</p>
@@ -60,6 +60,18 @@
             <p class="bg-pink p-20p">
               <span class="text-secondary font-weight-bold">Внимание!</span> Перед получением, проверьте целостность продукции. Расписываясь в бланке приема при получении, вы соглашаетесь с тем, что товар поставлен в полном объеме и надлежащего качества.
             </p>
+            <div class="d-xl-none">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="h5 mt-30p">Бесплатная доставка</div>
+                  <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
+                </div>
+                <div class="col-md-6">
+                  <img class="img-fluid" src="//liberta.ua/img/delivery-free-delivery.png.pagespeed.ce.7pIj7G4CMu.png" alt="">
+                </div>
+              </div>
+              <p class="border border-2 p-20p">Если служба доставки не дает вам возможность вскрыть упаковку — откажитесь от приема товара и <a href="/contacts">сообщите нам</a> о данном факте удобным для вас способом.</p>
+            </div>
           </section>
           <section class="mt-40p">
             <h2>Способы оплаты</h2>
@@ -71,13 +83,13 @@
           <section class="mt-40p">
             <h3 class="h2">Транспортная упаковка зеркал</h3>
             <p>Все товары компании Liberta поставляются в упаковке из трехшарового брендированого гофрокартона. Дополнительную защиту от повреждений при транспортировке зеркал обеспечивает пенопласт. Упаковка также оборудована ручкой для удобной и безопасной транспортировки. Благодаря этому вероятность повреждения зеркала минимальна. Тем не менее, при получении зеркала в службе доставки, обязательно убедитесь, что изделие не повреждено. Вскройте упаковку при получении и проверьте зеркало.</p>
-            <p class="font-weight-bold">
+            <div class="font-weight-bold d-flex align-items-center">
               <img class="mr-3" src="//liberta.ua/img/delivery-attention.png" alt="">
-              Не ставьте продукцию на угол или торец, это может привести к сколам и трещинам!
-            </p>
+              <p class="mb-0">Не ставьте продукцию на угол или торец, это может привести к сколам и трещинам!</p>
+            </div>
           </section>
         </div>
-        <div class="col-xl-4 bg-light fs-14 px-30p py-60p">
+        <div class="col-xl-4 bg-light fs-14 px-30p py-60p d-none d-xl-block">
           <div class="h5">Бесплатная доставка</div>
           <p>Мы бесплатно доставим выбранную вами продукцию в любой город Украины</p>
           <img class="img-fluid d-block mx-auto" src="//liberta.ua/img/delivery-free-delivery.png" alt="">
